<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 Wolfram Rittmeyer

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_demo_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_demo_header"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="false"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/txt_user_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/user_name" />

        <Button
            android:id="@+id/btn_select_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/btn_register" />

    <TextView
        android:id="@+id/txt_reg_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="middle"
        android:maxLines="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="@color/holo_light_grey_solid"/>

    <EditText
        android:id="@+id/txt_message"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:hint="@string/txt_message_hint" />

    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|start"
        android:text="@string/btn_message" />

</LinearLayout>